CI: add explicit license for config package
Added override of license for robfig/config since it is not correctly set in package
itself.

Part of #124

--- a/.lichen.yaml
+++ b/.lichen.yaml
@@ -5,3 +5,6 @@ allow:
   - "BSD-2-Clause"
   - "MPL-2.0"
   - "CC-BY-SA-4.0"
+override:
+  - path: "github.com/robfig/config"
+    licenses: ["MPL-2.0"]
