--- a/.github/actions/prepare-ce-test-env/action.yml
+++ b/.github/actions/prepare-ce-test-env/action.yml
@@ -38,14 +38,16 @@ runs:
 
     - name: Install docker requirements
       run: |
-        sudo apt-get update && apt-get install -y ca-certificates curl gnupg lsb-release
+        sudo apt -y update
+        sudo apt -y install ca-certificates curl gnupg lsb-release
         sudo mkdir -p /etc/apt/keyrings && curl -fsSL \
         https://download.docker.com/linux/ubuntu/gpg | \
         gpg --dearmor -o /etc/apt/keyrings/docker.gpg
         sudo echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] \
         https://download.docker.com/linux/ubuntu \
         $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
-        apt-get update && apt-get install -y docker-ce docker-ce-cli containerd.io
+        sudo apt -y update
+        sudo apt -y instal docker-ce docker-ce-cli containerd.io
       shell: bash
 
     - name: Install Tarantool
