--- a/.github/actions/prepare-ce-test-env/action.yml
+++ b/.github/actions/prepare-ce-test-env/action.yml
@@ -40,8 +40,8 @@ runs:
       run: |
         sudo apt -y update
         sudo apt -y install ca-certificates curl gnupg lsb-release
-        sudo mkdir -p /etc/apt/keyrings && curl -fsSL \
-        https://download.docker.com/linux/ubuntu/gpg | \
+        sudo mkdir -p /etc/apt/keyrings
+        sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg | \
         gpg --dearmor -o /etc/apt/keyrings/docker.gpg
         sudo echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] \
         https://download.docker.com/linux/ubuntu \
