--- a/.github/actions/prepare-ce-test-env/action.yml
+++ b/.github/actions/prepare-ce-test-env/action.yml
@@ -38,8 +38,6 @@ runs:
 
     - name: Install docker requirements
       run: |
-        sudo apt -y update
-        sudo apt -y install ca-certificates curl gnupg lsb-release
         sudo mkdir -p /etc/apt/keyrings
         sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo \
         gpg --dearmor -o /etc/apt/keyrings/docker.gpg
@@ -47,7 +45,7 @@ runs:
         https://download.docker.com/linux/ubuntu \
         $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
         sudo apt -y update
-        sudo apt -y instal docker-ce docker-ce-cli containerd.io
+        sudo apt -y install docker-ce docker-ce-cli containerd.io
       shell: bash
 
     - name: Install Tarantool
